crates/cella-codegen/src/schema/snapshots/cella_codegen__schema__parse__tests__any_of.snap
---
source: crates/cella-codegen/src/schema/parse.rs
expression: result
---
ParsedSchema {
    definitions: {},
    root: SchemaNode {
        description: None,
        deprecated: false,
        schema_type: None,
        properties: {},
        required: [],
        additional_properties: None,
        pattern_properties: {},
        items: None,
        one_of: [],
        all_of: [],
        any_of: [
            SchemaNode {
                description: None,
                deprecated: false,
                schema_type: Some(
                    Single(
                        String,
                    ),
                ),
                properties: {},
                required: [],
                additional_properties: None,
                pattern_properties: {},
                items: None,
                one_of: [],
                all_of: [],
                any_of: [],
                enum_values: [],
                ref: None,
                minimum: None,
                maximum: None,
                unevaluated_properties: None,
                definitions: {},
            },
            SchemaNode {
                description: None,
                deprecated: false,
                schema_type: Some(
                    Single(
                        Boolean,
                    ),
                ),
                properties: {},
                required: [],
                additional_properties: None,
                pattern_properties: {},
                items: None,
                one_of: [],
                all_of: [],
                any_of: [],
                enum_values: [],
                ref: None,
                minimum: None,
                maximum: None,
                unevaluated_properties: None,
                definitions: {},
            },
        ],
        enum_values: [],
        ref: None,
        minimum: None,
        maximum: None,
        unevaluated_properties: None,
        definitions: {},
    },
}
